--- a/binary_tree/templates/binary_tree/binary_tree.html
+++ b/binary_tree/templates/binary_tree/binary_tree.html
@@ -53,6 +53,9 @@
         }
     });
 
+
+
+
     var my_tree_data;
     var settings = {
         "async": false,
@@ -62,124 +65,142 @@
         "data": "{\"root_node\": \"{{ user.unique_number }}\"}"
     };
 
-    $.ajax(settings).done(function (response) {
-        if (response.status) {
-            my_tree_data = response.tree;
-        } else {
-            my_tree_data = [];
+    function loadData() {
+        $.ajax(settings).done(function (response) {
+            if (response.status) {
+                my_tree_data = response.tree;
+            } else {
+                my_tree_data = [];
+            }
+        });
+    }
+
+    loadData();
+
+    function startTree() {
+
+        var not_active = {};
+        function traverseTree(orgChart, inputArray) {
+            return traverseNode(orgChart, inputArray, outputArray, inputArray[0].id);
         }
+        function generateRootNode(inputArray) {
+            var node = inputArray[0];
+            node.fakeId = 0;
+            node.fakeParentId = null;
+            return JSON.parse(JSON.stringify(node));
+        }
+        function getChildId(parentId, isLeftBranch) {
+            return parentId * 100000 + isLeftBranch;
+        }
+        function mockUnit(parentId, isLeftBranch) {
+            var magic = 16777213;
+            return {
+                id: -1,
+                parentId: parentId,
+                name: null,
+                package: null,
+                left: 0,
+                right: 0,
+                image: null,
+                left_node: null,
+                right_node: null
+            };
+        }
+        var nodes_customize = {};
+        function traverseNode(orgChart, inputArray, outputArray, nodeId, parentId, isLeftBranch) {
+            var node = inputArray.find(function(item) {
+                return (Number(item.id) === Number(nodeId));
+            });
+            var mock;
+            if (!node) {
+                throw new Error('Node ID ' + nodeId + ' is not present!');
+            }
+            if (node.parentId) {
+                node.fakeId = getChildId(node.parentId, isLeftBranch);
+                node.fakeParentId = parentId;
+                outputArray.push(node);
+            }
+            if (node.status == "1") {
+                nodes_customize[node.fakeId] = { color: "neutralgrey" };
+            } else if (node.status == "2") {
+                nodes_customize[node.fakeId] = { color: "teal" };
+            } else if (node.status == "3") {
+                nodes_customize[node.fakeId] = { color: "cordovan" };
+            } else if (node.status == "4") {
+                nodes_customize[node.fakeId] = { color: "green" };
+            } else {
+                nodes_customize[node.fakeId] = { color: "black" };
+            }
+            if (!node.left_node) {
+                mock = mockUnit(nodeId, 0);
+                mock.fakeId = getChildId(node.id, 0);
+                nodes_customize[getChildId(node.id, 0)] = { theme: "helen" };
+                mock.fakeParentId = node.fakeId;
+                outputArray.push(mock);
+            } else if (!node.skip_children) {
+                traverseNode(orgChart, inputArray, outputArray, node.left_node, node.fakeId, 0);
+            }
+            if (!node.right_node) {
+                mock = mockUnit(nodeId, 1);
+                mock.fakeId = getChildId(node.id, 1);
+                nodes_customize[getChildId(node.id, 1)] = { theme: "helen" };
+                mock.fakeParentId = node.fakeId;
+                outputArray.push(mock);
+            } else if (!node.skip_children) {
+                traverseNode(orgChart, inputArray, outputArray, node.right_node, node.fakeId, 1);
+            }
+            return outputArray;
+        }
+        var peopleElement = document.getElementById("tree");
+        var outputArray = [generateRootNode(my_tree_data)];
+        traverseTree(null, my_tree_data, outputArray);
+        var orgChart = new getOrgChart(peopleElement, {
+            renderNodeEvent: renderNodeHandler,
+            color: "neutralgrey",
+            gridView: true,
+            idField: "fakeId",
+            parentIdField: "fakeParentId",
+            enableEdit: false,
+            enableSearch: false,
+            enableDetailsView: false,
+            enableZoomOnNodeDoubleClick: true,
+            linkType: "M",
+            primaryFields: [
+                "name",
+                "left_points",
+                "right_points",
+                "package_weight",
+                "look_tree"
+            ],
+            photoFields: ["image"],
+            expandToLevel: 30,
+            scale: 0.3,
+            dataSource: outputArray,
+            customize: nodes_customize
+        });
+        function renderNodeHandler(sender, args) {
+            for (i = 0; i < args.content.length; i++) {
+                if (args.content[i].indexOf(args.node.data["look_tree"]) != -1) {
+                    args.content[i] = "<foreignObject x='420' y='10' width='70' height='70'>" + args.node.data["look_tree"] + "</foreignObject>";
+                }
+                if (args.content[i].indexOf(args.node.data["package_weight"]) != -1) {
+                    args.content[i] = "<foreignObject x='0' y='-45' width='54' height='42'>" + args.node.data["package_weight"] + "</foreignObject>";
+                }
+            }
+        }
+
+        traverseTree(orgChart, my_tree_data);
+
+    }
+    startTree();
+    $('body').on('click', '.look_tree', function(e){
+        e.preventDefault();
+        {#$(peopleElement).text('');#}
+        settings.data = "{\"root_node\": \"" + $(this).attr('href') + "\"}";
+        loadData();
+        startTree();
     });
 
-    var not_active = {};
-    function traverseTree(orgChart, inputArray) {
-        return traverseNode(orgChart, inputArray, outputArray, inputArray[0].id);
-    }
-    function generateRootNode(inputArray) {
-        var node = inputArray[0];
-        node.fakeId = 0;
-        node.fakeParentId = null;
-        return JSON.parse(JSON.stringify(node));
-    }
-    function getChildId(parentId, isLeftBranch) {
-        return parentId * 100000 + isLeftBranch;
-    }
-    function mockUnit(parentId, isLeftBranch) {
-        var magic = 16777213;
-        return {
-            id: -1,
-            parentId: parentId,
-            name: null,
-            package: null,
-            left: 0,
-            right: 0,
-            image: null,
-            left_node: null,
-            right_node: null
-        };
-    }
-    var nodes_customize = {};
-    function traverseNode(orgChart, inputArray, outputArray, nodeId, parentId, isLeftBranch) {
-        var node = inputArray.find(function(item) {
-            return (Number(item.id) === Number(nodeId));
-        });
-        var mock;
-        if (!node) {
-            throw new Error('Node ID ' + nodeId + ' is not present!');
-        }
-        if (node.parentId) {
-            node.fakeId = getChildId(node.parentId, isLeftBranch);
-            node.fakeParentId = parentId;
-            outputArray.push(node);
-        }
-        if (node.status == "1") {
-            nodes_customize[node.fakeId] = { color: "neutralgrey" };
-        } else if (node.status == "2") {
-            nodes_customize[node.fakeId] = { color: "teal" };
-        } else if (node.status == "3") {
-            nodes_customize[node.fakeId] = { color: "cordovan" };
-        } else if (node.status == "4") {
-            nodes_customize[node.fakeId] = { color: "green" };
-        } else {
-            nodes_customize[node.fakeId] = { color: "black" };
-        }
-        if (!node.left_node) {
-            mock = mockUnit(nodeId, 0);
-            mock.fakeId = getChildId(node.id, 0);
-            nodes_customize[getChildId(node.id, 0)] = { theme: "helen" };
-            mock.fakeParentId = node.fakeId;
-            outputArray.push(mock);
-        } else if (!node.skip_children) {
-            traverseNode(orgChart, inputArray, outputArray, node.left_node, node.fakeId, 0);
-        }
-        if (!node.right_node) {
-            mock = mockUnit(nodeId, 1);
-            mock.fakeId = getChildId(node.id, 1);
-            nodes_customize[getChildId(node.id, 1)] = { theme: "helen" };
-            mock.fakeParentId = node.fakeId;
-            outputArray.push(mock);
-        } else if (!node.skip_children) {
-            traverseNode(orgChart, inputArray, outputArray, node.right_node, node.fakeId, 1);
-        }
-        return outputArray;
-    }
-    var peopleElement = document.getElementById("tree");
-    var outputArray = [generateRootNode(my_tree_data)];
-    traverseTree(null, my_tree_data, outputArray);
-    var orgChart = new getOrgChart(peopleElement, {
-        renderNodeEvent: renderNodeHandler,
-        color: "neutralgrey",
-        gridView: true,
-        idField: "fakeId",
-        parentIdField: "fakeParentId",
-        enableEdit: false,
-        enableSearch: false,
-        enableDetailsView: false,
-        enableZoomOnNodeDoubleClick: true,
-        linkType: "M",
-        primaryFields: [
-            "name",
-            "left_points",
-            "right_points",
-            "package_weight",
-            "look_tree"
-        ],
-        photoFields: ["image"],
-        expandToLevel: 30,
-        scale: 0.3,
-        dataSource: outputArray,
-        customize: nodes_customize
-    });
-    function renderNodeHandler(sender, args) {
-        for (i = 0; i < args.content.length; i++) {
-            if (args.content[i].indexOf(args.node.data["look_tree"]) != -1) {
-                args.content[i] = "<foreignObject x='420' y='10' width='70' height='70'>" + args.node.data["look_tree"] + "</foreignObject>";
-            }
-            if (args.content[i].indexOf(args.node.data["package_weight"]) != -1) {
-                args.content[i] = "<foreignObject x='0' y='-45' width='54' height='42'>" + args.node.data["package_weight"] + "</foreignObject>";
-            }
-        }
-    }
-    traverseTree(orgChart, my_tree_data);
     </script>
     <style type="text/css">
     html,
