--- a/templates/cabinet.html
+++ b/templates/cabinet.html
@@ -1,4 +1,5 @@
 {% load static %}
+{% load i18n %}
 
 <!DOCTYPE html>
 <html dir="ltr" lang="ru">
@@ -47,6 +48,16 @@
                     </div>
                     </div>
                 {% endfor %}
+            {% endif %}
+
+            {% if not perms.user_profile.is_verified %}
+                <div class="col-12">
+                    <div class="alert alert-danger" style="font-size: 1.6em">
+                        {% trans 'Вам необходимо пройти верификацию' %}
+                        &rarr; <a href="{% url 'user:verification' %}">{% trans 'Верификация' %}</a>
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close"> <span aria-hidden="true">×</span> </button>
+                    </div>
+                </div>
             {% endif %}
 
             {% block content %}
