--- a/templates/cabinet_parts/_left-sidebar.html
+++ b/templates/cabinet_parts/_left-sidebar.html
@@ -50,6 +50,12 @@
                                 <span class="hide-menu">{% trans 'Общая статистика' %}</span>
                             </a>
                         </li>
+                        <li class="sidebar-item">
+                            <a href="{% url 'finance:send-money' %}" class="sidebar-link">
+                                <i class="mdi mdi-email"></i>
+                                <span class="hide-menu">{% trans 'Перевод средств' %}</span>
+                            </a>
+                        </li>
                     </ul>
                 </li>
 
