--- a/templates/landings/home.html
+++ b/templates/landings/home.html
@@ -12,7 +12,7 @@
 <body>
     <h1>Home</h1>
     <ul>
-        <li><a href="{% url 'dashboard:dashboard' %}">{% trans 'Кабинет' %}</a></li>
+        <li><a href="{% url 'dashboard_cabinet:dashboard' %}">{% trans 'Кабинет' %}</a></li>
     </ul>
 </body>
 </html>
