--- a/binary_tree/templates/binary_tree/binary_tree.html
+++ b/binary_tree/templates/binary_tree/binary_tree.html
@@ -4,7 +4,7 @@
 
 {% block page_title %}{% endblock page_title %}
 {% block headed_scripts %}
-    <script type="text/javascript" src="http://www.getorgchart.com/GetOrgChart/getorgchart/getorgchart.js"></script>
+    <script type="text/javascript" src="{% static 'getorgchart/getorgchart.js' %}"></script>
 {% endblock headed_scripts %}
 
 
@@ -12,7 +12,7 @@
 
 
 {% block footer_scripts %}
-    <link rel="stylesheet" type="text/css" href="http://www.getorgchart.com/GetOrgChart/getorgchart/getorgchart.css">
+    <link rel="stylesheet" type="text/css" href="{% static 'getorgchart/getorgchart.css' %}">
     <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <script type="text/javascript">
     function getCookie(name) {
