--- a/linear_tree/templates/linear_tree/linear_tree.html
+++ b/linear_tree/templates/linear_tree/linear_tree.html
@@ -2,13 +2,13 @@
 {% load i18n %}
 
 {% block headed_scripts %}
-    <script type="text/javascript" src="http://www.getorgchart.com/GetOrgChart/getorgchart/getorgchart.js"></script>
+    <script type="text/javascript" src="{% static 'getorgchart/getorgchart.js' %}"></script>
 {% endblock headed_scripts %}
 
 {% block content %}{% endblock content %}
 
 {% block footer_scripts %}
-    <link rel="stylesheet" type="text/css" href="http://www.getorgchart.com/GetOrgChart/getorgchart/getorgchart.css">
+    <link rel="stylesheet" type="text/css" href="{% static 'getorgchart/getorgchart.css' %}">
     <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <script type="text/javascript">
 
