--- a/linear_tree/templates/linear_tree/linear_tree.html
+++ b/linear_tree/templates/linear_tree/linear_tree.html
@@ -1,5 +1,6 @@
 {% extends 'cabinet.html' %}
 {% load i18n %}
+{% load static %}
 
 {% block headed_scripts %}
     <script type="text/javascript" src="{% static 'getorgchart/getorgchart.js' %}"></script>
