Was added full_name to binary_tree

--- a/binary_tree/templates/binary_tree/binary_tree.html
+++ b/binary_tree/templates/binary_tree/binary_tree.html
@@ -167,6 +167,7 @@
             linkType: "M",
             primaryFields: [
                 "name",
+                "full_name",
                 "left_points",
                 "right_points",
                 "package_weight",
