--- a/templates/cabinet_parts/_header.html
+++ b/templates/cabinet_parts/_header.html
@@ -237,80 +237,9 @@
 
 
                 <li class="nav-item dropdown">
-                    <a class="nav-link" href="#">
-                        {{ user.registration_direction }}
-
-                    </a>
-                    <div class="dropdown-menu mailbox animated bounceInDown" aria-labelledby="2">
-                        <span class="with-arrow">
-                            <span class="bg-danger"></span>
-                        </span>
-                        <ul class="list-style-none">
-                            <li>
-                                <div class="drop-title bg-danger text-white">
-                                    <h4 class="m-b-0 m-t-5">5 New</h4>
-                                    <span class="font-light">Messages</span>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="message-center message-body">
-                                    <!-- Message -->
-                                    <a href="javascript:void(0)" class="message-item">
-                                        <span class="user-img">
-                                            <img src="{% static 'adminbite' %}/assets/images/users/1.jpg" alt="user" class="rounded-circle">
-                                            <span class="profile-status online pull-right"></span>
-                                        </span>
-                                        <div class="mail-contnet">
-                                            <h5 class="message-title">Pavan kumar</h5>
-                                            <span class="mail-desc">Just see the my admin!</span>
-                                            <span class="time">9:30 AM</span>
-                                        </div>
-                                    </a>
-                                    <!-- Message -->
-                                    <a href="javascript:void(0)" class="message-item">
-                                        <span class="user-img">
-                                            <img src="{% static 'adminbite' %}/assets/images/users/2.jpg" alt="user" class="rounded-circle">
-                                            <span class="profile-status busy pull-right"></span>
-                                        </span>
-                                        <div class="mail-contnet">
-                                            <h5 class="message-title">Sonu Nigam</h5>
-                                            <span class="mail-desc">I've sung a song! See you at</span>
-                                            <span class="time">9:10 AM</span>
-                                        </div>
-                                    </a>
-                                    <!-- Message -->
-                                    <a href="javascript:void(0)" class="message-item">
-                                        <span class="user-img">
-                                            <img src="{% static 'adminbite' %}/assets/images/users/3.jpg" alt="user" class="rounded-circle">
-                                            <span class="profile-status away pull-right"></span>
-                                        </span>
-                                        <div class="mail-contnet">
-                                            <h5 class="message-title">Arijit Sinh</h5>
-                                            <span class="mail-desc">I am a singer!</span>
-                                            <span class="time">9:08 AM</span>
-                                        </div>
-                                    </a>
-                                    <!-- Message -->
-                                    <a href="javascript:void(0)" class="message-item">
-                                        <span class="user-img">
-                                            <img src="{% static 'adminbite' %}/assets/images/users/4.jpg" alt="user" class="rounded-circle">
-                                            <span class="profile-status offline pull-right"></span>
-                                        </span>
-                                        <div class="mail-contnet">
-                                            <h5 class="message-title">Pavan kumar</h5>
-                                            <span class="mail-desc">Just see the my admin!</span>
-                                            <span class="time">9:02 AM</span>
-                                        </div>
-                                    </a>
-                                </div>
-                            </li>
-                            <li>
-                                <a class="nav-link text-center link" href="javascript:void(0);">
-                                    <b>See all e-Mails</b>
-                                    <i class="fa fa-angle-right"></i>
-                                </a>
-                            </li>
-                        </ul>
+                    <div class="change-direction__wrapper">
+                        <button class="change-direction-link left" data-action="left" {% if user.registration_direction == 'left' %}disabled{% endif %} data-path="{% url 'user:change-direction' %}"></button>
+                        <button class="change-direction-link right" data-action="right" {% if user.registration_direction == 'right' %}disabled{% endif %} data-path="{% url 'user:change-direction' %}"></button>
                     </div>
                 </li>
 
