--- a/templates/landings/index.html
+++ b/templates/landings/index.html
@@ -86,8 +86,8 @@
                            href="https://bitcointalk.org/index.php?action=profile">
                             BOUNTY
                         </a>
-                        <a class="custom__btn registration whitelist">
-                            РЕГИСТРАЦИЯ
+                        <a class="custom__btn registration whitelist" href="{% url 'dashboard:dashboard' %}">
+                            Кабинет
                         </a>
                         <!--<div class="custom-select">-->
                         <!--<select>-->
@@ -1735,7 +1735,7 @@
 
                 <form action="https://footbic.us18.list-manage.com/subscribe/post" method="POST">
                     <input type="hidden" name="u" value="8fa1119b6e4edfc73e5e68b64">
-                    <input type="hidden" name="id" value="b6daaeef3d">
+                    <input type="hidden" name="id" value="d2e3a99235">
                     <input type="hidden" name="orig-lang" value="1">
                     <div class="form__wrapper">
                         <input type="email" placeholder="Введите email" required name="MERGE0" id="MERGE0" size="25"
@@ -1937,7 +1937,7 @@
         x
         </span>
         <input type="hidden" name="u" value="8fa1119b6e4edfc73e5e68b64">
-        <input type="hidden" name="id" value="aab495ce15">
+        <input type="hidden" name="id" value="4752e9683c">
         <input type="hidden" name="orig-lang" value="1">
         <label for="MERGE1">Ваш ETH кошелёк<span class="req asterisk">*</span></label>
         <input type="text" name="MERGE1" id="MERGE1" size="25" value="" required pattern="[a-zA-Z0-9]+">
