Add Payeer navigation

--- a/templates/cabinet_parts/_left-sidebar.html
+++ b/templates/cabinet_parts/_left-sidebar.html
@@ -57,12 +57,12 @@
                                 <span class="hide-menu">{% trans 'Перевод средств' %}</span>
                             </a>
                         </li>
-{#                        <li class="sidebar-item">#}
-{#                            <a href="{% url 'finance:add-money' %}" class="sidebar-link">#}
-{#                                <i class="mdi mdi-email"></i>#}
-{#                                <span class="hide-menu">{% trans 'Пополнение баланса' %}</span>#}
-{#                            </a>#}
-{#                        </li>#}
+                        <li class="sidebar-item">
+                            <a href="{% url 'finance:add-money' %}" class="sidebar-link">
+                                <i class="mdi mdi-email"></i>
+                                <span class="hide-menu">{% trans 'Пополнение баланса' %}</span>
+                            </a>
+                        </li>
                     </ul>
                 </li>
 
