--- a/finance/templates/finance/add-money-base-view.html
+++ b/finance/templates/finance/add-money-base-view.html
@@ -23,8 +23,8 @@
                                 <div class="form-group">
                                     <select name="currency" class="form-control">
                                         <option value="USD">USD</option>
-                                        <option value="EUR">EUR</option>
-                                        <option value="RUB">RUB</option>
+{#                                        <option value="EUR">EUR</option>#}
+{#                                        <option value="RUB">RUB</option>#}
                                     </select>
                                 </div>
                             </div>
