--- a/templates/cabinet.html
+++ b/templates/cabinet.html
@@ -74,7 +74,7 @@
                 </div>
             {% endblock content %}
             <footer class="footer text-center">
-                All Rights Reserved. Designed and Developed by <a href="#">vintkor</a>
+                All Rights Reserved. Designed and Developed by <a href="//gofriends.pro" target="_blank">GoFriends</a>
             </footer>
         </div>
     </div>
