--- a/templates/cabinet_parts/_header.html
+++ b/templates/cabinet_parts/_header.html
@@ -26,213 +26,11 @@
         </div>
         <div class="navbar-collapse collapse" id="navbarSupportedContent">
             <ul class="navbar-nav float-left mr-auto">
+              
                 <li class="nav-item d-none d-md-block">
                     <a class="nav-link sidebartoggler waves-effect waves-light" href="javascript:void(0)" data-sidebartype="mini-sidebar">
                         <i class="sl-icon-menu font-20"></i>
                     </a>
-                </li>
-                <li class="nav-item dropdown mega-dropdown">
-                    <a class="nav-link dropdown-toggle waves-effect waves-dark" href="starter-kit.html" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <i class="ti-gift font-20"></i>
-                    </a>
-                    <div class="dropdown-menu animated bounceInDown">
-                        <div class="mega-dropdown-menu row">
-                            <div class="col-lg-3 col-xlg-2 m-b-30">
-                                <h5 class="m-b-20">Carousel</h5>
-                                <!-- CAROUSEL -->
-                                <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-                                    <div class="carousel-inner" role="listbox">
-                                        <div class="carousel-item active">
-                                            <div class="container p-0">
-                                                <img class="d-block img-fluid" src="{% static 'adminbite' %}/assets/images/big/img1.jpg" alt="First slide">
-                                            </div>
-                                        </div>
-                                        <div class="carousel-item">
-                                            <div class="container p-0">
-                                                <img class="d-block img-fluid" src="{% static 'adminbite' %}/assets/images/big/img2.jpg" alt="Second slide">
-                                            </div>
-                                        </div>
-                                        <div class="carousel-item">
-                                            <div class="container p-0">
-                                                <img class="d-block img-fluid" src="{% static 'adminbite' %}/assets/images/big/img3.jpg" alt="Third slide">
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <a class="carousel-control-prev" href="starter-kit.html#carouselExampleControls" role="button" data-slide="prev">
-                                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                                        <span class="sr-only">Previous</span>
-                                    </a>
-                                    <a class="carousel-control-next" href="starter-kit.html#carouselExampleControls" role="button" data-slide="next">
-                                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                                        <span class="sr-only">Next</span>
-                                    </a>
-                                </div>
-                                <!-- End CAROUSEL -->
-                            </div>
-                            <div class="col-lg-3 m-b-30">
-                                <h5 class="m-b-20">Accordion</h5>
-                                <!-- Accordian -->
-                                <div id="accordion">
-                                    <div class="card m-b-5">
-                                        <div class="card-header" id="headingOne">
-                                            <h5 class="mb-0">
-                                                <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                                                    Collapsible Group Item #1
-                                                </button>
-                                            </h5>
-                                        </div>
-                                        <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
-                                            <div class="card-body">
-                                                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry.
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="card m-b-5">
-                                        <div class="card-header" id="headingTwo">
-                                            <h5 class="mb-0">
-                                                <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                                                    Collapsible Group Item #2
-                                                </button>
-                                            </h5>
-                                        </div>
-                                        <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordion">
-                                            <div class="card-body">
-                                                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry.
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="card m-b-5">
-                                        <div class="card-header" id="headingThree">
-                                            <h5 class="mb-0">
-                                                <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                                                    Collapsible Group Item #3
-                                                </button>
-                                            </h5>
-                                        </div>
-                                        <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
-                                            <div class="card-body">
-                                                Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry.
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-3  m-b-30">
-                                <h5 class="m-b-20">Contact Us</h5>
-                                <!-- Contact -->
-                                <form>
-                                    <div class="form-group">
-                                        <input type="text" class="form-control" id="exampleInputname1" placeholder="Enter Name"> </div>
-                                    <div class="form-group">
-                                        <input type="email" class="form-control" placeholder="Enter email"> </div>
-                                    <div class="form-group">
-                                        <textarea class="form-control" id="exampleTextarea" rows="3" placeholder="Message"></textarea>
-                                    </div>
-                                    <button type="submit" class="btn btn-info">Submit</button>
-                                </form>
-                            </div>
-                            <div class="col-lg-3 col-xlg-4 m-b-30">
-                                <h5 class="m-b-20">List style</h5>
-                                <!-- List style -->
-                                <ul class="list-style-none">
-                                    <li>
-                                        <a href="javascript:void(0)">
-                                            <i class="fa fa-check text-success"></i> You can give link</a>
-                                    </li>
-                                    <li>
-                                        <a href="javascript:void(0)">
-                                            <i class="fa fa-check text-success"></i> Give link</a>
-                                    </li>
-                                    <li>
-                                        <a href="javascript:void(0)">
-                                            <i class="fa fa-check text-success"></i> Another Give link</a>
-                                    </li>
-                                    <li>
-                                        <a href="javascript:void(0)">
-                                            <i class="fa fa-check text-success"></i> Forth link</a>
-                                    </li>
-                                    <li>
-                                        <a href="javascript:void(0)">
-                                            <i class="fa fa-check text-success"></i> Another fifth link</a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-                    </div>
-                </li>
-
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle waves-effect waves-dark" href="starter-kit.html" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        <i class="ti-bell font-20"></i>
-
-                    </a>
-                    <div class="dropdown-menu mailbox animated bounceInDown">
-                        <span class="with-arrow">
-                            <span class="bg-primary"></span>
-                        </span>
-                        <ul class="list-style-none">
-                            <li>
-                                <div class="drop-title bg-primary text-white">
-                                    <h4 class="m-b-0 m-t-5">4 New</h4>
-                                    <span class="font-light">Notifications</span>
-                                </div>
-                            </li>
-                            <li>
-                                <div class="message-center notifications">
-                                    <!-- Message -->
-                                    <a href="javascript:void(0)" class="message-item">
-                                        <span class="btn btn-danger btn-circle">
-                                            <i class="fa fa-link"></i>
-                                        </span>
-                                        <div class="mail-contnet">
-                                            <h5 class="message-title">Luanch Admin</h5>
-                                            <span class="mail-desc">Just see the my new admin!</span>
-                                            <span class="time">9:30 AM</span>
-                                        </div>
-                                    </a>
-                                    <!-- Message -->
-                                    <a href="javascript:void(0)" class="message-item">
-                                        <span class="btn btn-success btn-circle">
-                                            <i class="ti-calendar"></i>
-                                        </span>
-                                        <div class="mail-contnet">
-                                            <h5 class="message-title">Event today</h5>
-                                            <span class="mail-desc">Just a reminder that you have event</span>
-                                            <span class="time">9:10 AM</span>
-                                        </div>
-                                    </a>
-                                    <!-- Message -->
-                                    <a href="javascript:void(0)" class="message-item">
-                                        <span class="btn btn-info btn-circle">
-                                            <i class="ti-settings"></i>
-                                        </span>
-                                        <div class="mail-contnet">
-                                            <h5 class="message-title">Settings</h5>
-                                            <span class="mail-desc">You can customize this template as you want</span>
-                                            <span class="time">9:08 AM</span>
-                                        </div>
-                                    </a>
-                                    <!-- Message -->
-                                    <a href="javascript:void(0)" class="message-item">
-                                        <span class="btn btn-primary btn-circle">
-                                            <i class="ti-user"></i>
-                                        </span>
-                                        <div class="mail-contnet">
-                                            <h5 class="message-title">Pavan kumar</h5>
-                                            <span class="mail-desc">Just see the my admin!</span>
-                                            <span class="time">9:02 AM</span>
-                                        </div>
-                                    </a>
-                                </div>
-                            </li>
-                            <li>
-                                <a class="nav-link text-center m-b-5" href="javascript:void(0);">
-                                    <strong>Check all notifications</strong>
-                                    <i class="fa fa-angle-right"></i>
-                                </a>
-                            </li>
-                        </ul>
-                    </div>
                 </li>
 
 
@@ -261,17 +59,11 @@
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="starter-kit.html#" id="navbarDropdown2" role="button" data-toggle="dropdown" aria-haspopup="true"
                         aria-expanded="false">
-                        <i class="flag-icon flag-icon-us font-18"></i>
+                        <i class="flag-icon flag-icon-ru font-18"></i>
                     </a>
                     <div class="dropdown-menu dropdown-menu-right  animated bounceInDown" aria-labelledby="navbarDropdown2">
                         <a class="dropdown-item" href="starter-kit.html#">
-                            <i class="flag-icon flag-icon-us"></i> English</a>
-                        <a class="dropdown-item" href="starter-kit.html#">
-                            <i class="flag-icon flag-icon-fr"></i> French</a>
-                        <a class="dropdown-item" href="starter-kit.html#">
-                            <i class="flag-icon flag-icon-es"></i> Spanish</a>
-                        <a class="dropdown-item" href="starter-kit.html#">
-                            <i class="flag-icon flag-icon-de"></i> German</a>
+                            <i class="flag-icon flag-icon-ru"></i> Русский</a>
                     </div>
                 </li>
 
@@ -300,15 +92,11 @@
                             </div>
                             <div class="m-l-10">
                                 <h4 class="m-b-0">{{ user.unique_number }}</h4>
-{#                                <h4 class="m-b-0">Steave Jobs</h4>#}
                                 <p class=" m-b-0">{{ user.email }}</p>
                             </div>
                         </div>
                         <a class="dropdown-item" href="{% url 'user:profile' %}">
                             <i class="ti-user m-r-5 m-l-5"></i> {% trans 'Мой профиль' %}</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="javascript:void(0)">
-                            <i class="ti-settings m-r-5 m-l-5"></i> Account Setting</a>
                         <div class="dropdown-divider"></div>
                         <a class="dropdown-item" href="{% url 'user:logout' %}">
                             <i class="fa fa-power-off m-r-5 m-l-5"></i> {% trans 'Выйти' %}</a>
