--- a/static/main.css
+++ b/static/main.css
@@ -40,7 +40,7 @@
 .package-Standart {color: green;}
 .package-Medium {color: blue;}
 .package-VIP {color: #d22;}
-.rang-No {display: none;}
+.rang-No {color: rgb(179, 182, 182)}
 .rang-Diamond {color: blue;}
 .rang-Gold {color: #d22;}
 .rang-Silver {color: green;}
