--- a/finance/templates/finance/add-money-base-view.html
+++ b/finance/templates/finance/add-money-base-view.html
@@ -50,4 +50,6 @@
 {% endblock content %}
 
 
-{% block footer_scripts %}{% endblock footer_scripts %}
+{% block footer_scripts %}
+<script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
+{% endblock footer_scripts %}
