--- a/static/main.css
+++ b/static/main.css
@@ -48,3 +48,19 @@
 .hidden {
   display: none;
 }
+
+.qr_code {
+  width: 70px;
+  height: 70px;
+  transition: transform .2s ease;
+  display: block;
+  position: absolute;
+}
+.qr_code:hover {
+  transform: translateX(-330px);
+  width: 400px;
+  height: 400px;
+  transition: all .2s ease;
+  cursor: none;
+  z-index: 99;
+}
