--- a/dashboard/templates/dashboard/dashboard.html
+++ b/dashboard/templates/dashboard/dashboard.html
@@ -92,6 +92,34 @@
             </div>
         </div>
     </div>
+    <div class="row">
+        <div class="col-sm-12 col-lg-6">
+            <div class="card">
+                <div class="card-body">
+                    <h4 class="card-title">{% trans 'Последние новости' %}</h4>
+                    <div class="feed-widget scrollable ps-container ps-theme-default" style="height:450px;" data-ps-id="fbba4cb8-1e7a-d7de-8c01-77e8cc18fb05">
+                        <ul class="list-style-none feed-body m-0 p-b-20">
+                            {% for news in last_news %}
+                                <li class="feed-item">
+                                    <div class="feed-icon bg-info">
+                                        <i class="far fa-bell"></i>
+                                    </div>
+                                    <a href="#">{{ news.title }}</a>
+                                    <span class="ml-auto font-12 text-muted">{{ news.created }}</span>
+                                </li>
+                            {% endfor %}
+                        </ul>
+                        <div class="ps-scrollbar-x-rail" style="left: 0px; bottom: 0px;">
+                            <div class="ps-scrollbar-x" tabindex="0" style="left: 0px; width: 0px;"></div>
+                        </div>
+                        <div class="ps-scrollbar-y-rail" style="top: 0px; right: 3px;">
+                            <div class="ps-scrollbar-y" tabindex="0" style="top: 0px; height: 0px;"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </div>
 {% endblock content %}
 
