--- a/dashboard/templates/dashboard/dashboard.html
+++ b/dashboard/templates/dashboard/dashboard.html
@@ -93,6 +93,43 @@
         </div>
     </div>
     <div class="row">
+        <!-- Последние финансовые операции -->
+        <div class="col-sm-12 col-lg-6">
+            <div class="card">
+                <div class="card-body">
+                    <h4 class="card-title">{% trans 'Последние финансовые операции' %}</h4>
+                    <div class="feed-widget scrollable ps-container ps-theme-default" style="height:450px;" data-ps-id="fbba4cb8-1e7a-d7de-8c01-77e8cc18fb05">
+                        <ul class="list-style-none feed-body m-0 p-b-20">
+                            {% for finance in last_finanses %}
+                            <li class="feed-item">
+                                 
+                                <div class="feed-icon bg-{% if finance.amount < 0 %}danger{% else %}success{% endif %}">
+                                    <i class="mdi mdi-currency-usd text-white"></i>
+                                </div>
+                                <a>
+                                    {% if finance.amount < 0 %}
+                                        <span style="font-weight: bold; color: #d22;">{{ finance.amount }}</span>
+                                    {% else %}
+                                        <span style="font-weight: bold; color: green;">{{ finance.amount }}</span>
+                                    {% endif %}
+                                    <span class="text-muted">{{ finance.purpose }}</span>
+                                </a>
+                                <span class="ml-auto font-12 text-muted">{{ finance.created }}</span>
+                            </li>
+                            {% endfor %}
+                        </ul>
+                        <div class="ps-scrollbar-x-rail" style="left: 0px; bottom: 0px;">
+                            <div class="ps-scrollbar-x" tabindex="0" style="left: 0px; width: 0px;"></div>
+                        </div>
+                        <div class="ps-scrollbar-y-rail" style="top: 0px; right: 3px;">
+                            <div class="ps-scrollbar-y" tabindex="0" style="top: 0px; height: 0px;"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Последние новости -->
         <div class="col-sm-12 col-lg-6">
             <div class="card">
                 <div class="card-body">
