--- a/templates/cabinet_parts/_left-sidebar.html
+++ b/templates/cabinet_parts/_left-sidebar.html
@@ -63,6 +63,12 @@
                                 <span class="hide-menu">{% trans 'Пополнение баланса' %}</span>
                             </a>
                         </li>
+                        <li class="sidebar-item">
+                            <a href="{% url 'finance:get-money' %}" class="sidebar-link">
+                                <i class="mdi mdi-email"></i>
+                                <span class="hide-menu">{% trans 'Вывод средств' %}</span>
+                            </a>
+                        </li>
                     </ul>
                 </li>
 
