--- a/user_profile/templates/user_profile/login.html
+++ b/user_profile/templates/user_profile/login.html
@@ -30,8 +30,8 @@
         </div>
         <div class="form-group m-b-0 m-t-10 ">
             <div class="col-sm-12 text-center ">
-                <a href="#" class="text-info m-l-5 ">
-                    <b>{% trans 'Регистрация' %}</b>
+                <a href="{% url 'user:forgot-password' %}" class="text-info m-l-5 ">
+                    <b>{% trans 'Забыли пароль?' %}</b>
                 </a>
             </div>
         </div>
