Button copy ref link

--- a/user_profile/templates/user_profile/user-profile.html
+++ b/user_profile/templates/user_profile/user-profile.html
@@ -71,11 +71,17 @@
                             </tr>
                             <tr>
                                 <td>{% trans 'Реферальная ссылка (Форма регистрации)' %}</td>
-                                <td><a target="_blank" href="//{{ request.META.HTTP_HOST }}{{ ref_link }}">//{{ request.META.HTTP_HOST }}{{ ref_link }}</a></td>
+                                <td>
+                                    <a class="ref-link" target="_blank" href="https://{{ request.META.HTTP_HOST }}{{ ref_link }}">https://{{ request.META.HTTP_HOST }}{{ ref_link }}</a>
+                                    <button style="float: right;" class="js-textareacopybtn btn btn-info btn-sm">{% trans 'Скопировать ссылку' %}</button>
+                                </td>
                             </tr>
                             <tr>
                                 <td>{% trans 'Реферальная ссылка (На fbt.world)' %}</td>
-                                <td><a target="_blank" href="//{{ request.META.HTTP_HOST }}{{ ref_link }}">//{{ request.META.HTTP_HOST }}{{ ref_link_home }}</a></td>
+                                <td>
+                                    <a class="ref-link" target="_blank" href="https://{{ request.META.HTTP_HOST }}{{ ref_link }}">https://{{ request.META.HTTP_HOST }}{{ ref_link_home }}</a>
+                                    <button style="float: right;" class="js-textareacopybtn btn btn-info btn-sm">{% trans 'Скопировать ссылку' %}</button>
+                                </td>
                             </tr>
                             <tr>
                                 <td>{% trans 'Дата регистрации' %}</td>
@@ -98,4 +104,20 @@
 {% endblock content %}
 
 
-{% block footer_scripts %}{% endblock footer_scripts %}
+{% block footer_scripts %}
+
+<script>
+        $('.js-textareacopybtn').click(function (e) {
+            e.preventDefault();
+            var linkText = $(this).siblings('.ref-link').text();
+            var $temp = $("<input>");
+
+            $("body").append($temp);
+            $temp.val(linkText).select();
+            document.execCommand("copy");
+            $temp.remove();
+            alert('Ссылка ' + linkText + ' скопирована');
+        });
+    </script>
+
+{% endblock footer_scripts %}
