--- a/static/main.css
+++ b/static/main.css
@@ -64,3 +64,16 @@
   cursor: none;
   z-index: 99;
 }
+
+.lesson-video-badge {
+  position: absolute;
+  top: 20px;
+  right: 0;
+  width: 80px;
+  height: 25px;
+  background: rgb(148, 236, 236);
+  display: flex;
+  align-content: center;
+  justify-content: center;
+  line-height: 25px;
+}
