--- a/templates/landings/index.html
+++ b/templates/landings/index.html
@@ -1811,40 +1811,19 @@
                    href="https://www.facebook.com/Football-Global-Net-PLC-187922921899489/?modal=admin_todo_tour">
                     <img src="{% static '' %}footbikmlm/app/img/fb_ic.svg">
                 </a>
-                <!-- <a class="social__item" target="_blank" href="https://www.instagram.com/footballglobalnet/">
-                    <img src="{% static '' %}footbikmlm/app/img/ic_inst.svg">
-                </a> -->
                 <a class="social__item" target="_blank" href="https://twitter.com/global_plc?lang=en">
                     <img src="{% static '' %}footbikmlm/app/img/ic_twi.svg">
                 </a>
-                <a class="social__item" target="_blank" href="#">
+                <a class="social__item" target="_blank" href="https://www.youtube.com/channel/UCluJd_4ESdYcryjymUyN6Sw">
                     <img src="{% static '' %}footbikmlm/app/img/ic_youtube.svg">
                 </a>
                 <a class="social__item" target="_blank"
                    href="https://www.linkedin.com/in/football-global-net-plc-185811167/">
                     <img src="{% static '' %}footbikmlm/app/img/ic_linked.png">
                 </a>
-                <a class="social__item" target="_blank" href="#">
-                    <img src="{% static '' %}footbikmlm/app/img/ic_z.png">
-                </a>
-                <a class="social__item" target="_blank" href="https://medium.com/@footballglobalnetplc">
-                    <img src="/img/Medium-logo.png">
-                </a>
-                <a class="social__item" target="_blank" href="#">
-                    <img src="/img/ic_z.png">
-                </a>
                 <a class="social__item" target="_blank" href="https://t.me/footballglobalnet">
                     <img src="{% static '' %}footbikmlm/app/img/telegram-logo.svg">
                 </a>
-                <a class="social__item" target="_blank" href="https://github.com/footballglobalnet">
-                    <img src="{% static '' %}footbikmlm/app/img/ic_cAT.png">
-                </a>
-                    <a class="social__item" target="_blank" href="https://bitcointalk.org/index.php?action=profile">
-                        <img src="/img/ic_b.svg">
-                    </a>
-                    <a class="social__item" target="_blank" href="https://github.com/footballglobalnet">
-                        <img src="/img/ic_cAT.png">
-                    </a>
                 </div>
 
         </div>
